# SAE

./: .gitignore  AGENTS.md  README.md  Research-1.md  analysis.md  install_miniconda.sh  pyproject.toml  requirements.txt  sae_seed_similarity.md  setup_dev_env.sh
configs/: pythia_160m_two_seed.yaml
notebooks/: sae_seed_similarity_evaluation.ipynb
notebooks/research-1/: 1.1_starter.ipynb  1.2_SAE_two_seed_run.ipynb
references/: glossary.md  interpretability-techniques.md  sparse-autoencoders.md  tools-and-libraries.md  transformer-circuits.md
sae_seed_similarity/: __init__.py  adapters.py  collect_activations.py  compare_representations.py  config.py  controls.py  make_report.py  match_features.py  matching.py  metrics.py  plotting.py  run_ablations.py  run_all.py  statistics.py  storage.py  utils.py
scripts/: hungarian_alignment.py  train_two_seed_sae.py  upload_checkpoints_to_hf.py  upload_similarity_metrics_to_hf.py
tests/: test_config_and_storage.py  test_matching.py  test_metrics.py  test_plotting.py  test_progress.py  test_report_integration.py  test_synthetic_integration.py  test_upload_similarity_metrics.py
