[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sae-seed-similarity"
version = "0.1.0"
description = "Reproducible feature, representation, and causal comparison of SAE seeds"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=3.0,<5",
  "huggingface-hub>=0.27,<2",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<2",
  "pandas>=2.1,<3",
  "pyarrow>=15,<22",
  "PyYAML>=6,<7",
  "sae-lens==6.46.0",
  "scipy>=1.12,<1.15",
  "seaborn>=0.13,<1",
  "tabulate>=0.9,<1",
  "torch>=2.6,<3",
  "tqdm>=4.66,<5",
  "transformer-lens==2.16.1",
  "transformers==4.53.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4,<9", "pytest-cov>=5,<7", "nbformat>=5.9,<6"]

[tool.setuptools.packages.find]
include = ["sae_seed_similarity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
